--- a/index.html
+++ b/index.html
@@ -1729,7 +1729,7 @@
             "Allan Dale Ho",
             "Allyza Magsino Ramos",
             "Amir Acosta",
-            "Ian Evangeista",
+            "Ian Evangelista",
             "Chesca Chua-Vivas",
             "Dianne Miles Ho",
             "Dyan Galang",
@@ -3583,4 +3583,5 @@
     </script>
 </body>
 </html>
+
 
