--- a/Badminton Court Manager.html
+++ b/Badminton Court Manager.html
@@ -1729,7 +1729,7 @@
             "Allan Dale Ho",
             "Allyza Magsino Ramos",
             "Amir Acosta",
-            "Ian Bautista",
+            "Ian Evangelista",
             "Chesca Chua-Vivas",
             "Dianne Miles Ho",
             "Dyan Galang",
